--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -262,3 +262,5 @@ dataviewApiParamsCommand.filter.error.message=Property {0} with invalid value {3
 
 # AssetDependency custom validation error messages
 assetDependency.dependent.invalid.dependent = An asset dependency reference to itself is prohibited
+
+invalid.csrf.token = Unable to perform action due to missing form token. Please retry form entry.
