--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -264,3 +264,5 @@ dataviewApiParamsCommand.filter.error.message=Property {0} with invalid value {3
 assetDependency.dependent.invalid.dependent = An asset dependency reference to itself is prohibited
 
 recipeVersion.sourceCode.maxSize.exceeded = The recipe exceeds the maximum size of {3}
+
+invalid.csrf.token = Unable to perform action due to missing form token. Please retry form entry.
